--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine on
 
-RewriteBase /bookcat/
+#RewriteBase /bookcat/
 
 #RewriteCond %{DOCUMENT_ROOT} !-d
 RewriteCond $1 !^(index\.php|user_guide|assets|robots\.txt)
